# libgtkhexa

./: AUTHORS  ChangeLog  HISTORY  Makefile.am  README  TODO  autoclean.sh  autogen.sh  configure.ac  libgtkhexa.pc
doc/: Makefile.in
po/: POTFILES.in  en_GB.po
src/: Makefile.am  gtkhexa.c
src/include/: gtkhexa.h
tests/: Makefile  Makefile.am  Makefile.in  test-gtkhexa  test-gtkhexa.c  test-gtkhexa.glade
tests/include/: test-gtkhexa.h
